# Project-1

./: AddAuto.cpp  AddAuto.h  Automaton.h  CMakeLists.txt  ColonAuto.cpp  ColonAuto.h  ColonDashAuto.cpp  ColonDashAuto.h  CommaAuto.cpp  CommaAuto.h  CommentAuto.cpp  CommentAuto.h  Database.cpp  Database.h  EOF_CPAuto.cpp  EOF_CPAuto.h  FactsAuto.cpp  FactsAuto.h  Header.cpp  Header.h  IdAuto.cpp  IdAuto.h  Interpreter.cpp  Interpreter.h  LP_Auto.cpp  LP_Auto.h  Lexer.cpp  Lexer.h  MultAuto.cpp  MultAuto.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAuto.cpp  PeriodAuto.h  Predicate.cpp  Predicate.h  Q_MarkAuto.cpp  Q_MarkAuto.h  (+23 more)
Lab1PassOffCases/1-70/: answer6.txt
Lab2PassOffCases/2-80/: input0.txt
